@@ -2,61 +2,50 @@ package pkg.virdin.wayland
 
 import androidx.compose.ui.ExperimentalComposeUiApi
 import androidx.compose.ui.ImageComposeScene
+import androidx.compose.ui.InternalComposeUiApi
+import androidx.compose.ui.platform.PlatformContext
+import kotlinx.coroutines.suspendCancellableCoroutine
+import java.lang.invoke.MethodHandles
 import kotlin.coroutines.CoroutineContext
 
 /**
- * Factory that constructs the [ImageComposeScene] used by [OffScreenRenderer].
+ * Factory that constructs the [ImageComposeScene] and injects a custom
+ * [PlatformContext] to enable keyboard input (IME) on Wayland.
  *
  * ## Why this exists
  *
- * [OffScreenRenderer] needs to inject a custom `PlatformContext` into
- * [ImageComposeScene] via reflection in order to intercept `startInputMethod`
- * (IME / keyboard input).  When the library is consumed as a JAR the JVM
- * module system may block that `final`-field write, silently leaving keyboard
- * input broken.
+ * [PlatformContext.startInputMethod] is the only hook that modern Compose
+ * text fields use for input. Injecting it requires writing a `final` field
+ * inside [ImageComposeScene] via reflection. On Java 17+ this write is
+ * blocked when performed from inside a library JAR, but succeeds when
+ * performed from the consumer's own module.
  *
- * By providing your own factory you perform the construction — and the
- * reflection injection — inside *your* module, where access is permitted,
- * and hand the ready-to-use scene back to the library.
+ * This factory moves both scene construction and the field write into the
+ * consumer's module, where access is permitted.
  *
- * ## What you must do inside [create]
+ * ## Required JVM flags
  *
- * 1. Construct an [ImageComposeScene] using the values exposed by the
- *    [WaylandBridge] receiver: [WaylandBridge.actualWidth],
- *    [WaylandBridge.actualHeight], and [WaylandBridge.surfaceDensity].
- * 2. Inject a custom `PlatformContext` that overrides `startInputMethod`
- *    and calls [WaylandBridge.notifyInputSession] to hand the session back
- *    to the library.
- * 3. Return the scene.  Do **not** set content — the library does that.
- *
- * ## What the library still owns
- *
- * - `setPointerIcon` — cursor changes continue to work via the library's
- *   own internal wiring; you do not need to handle them.
- * - `width`, `height`, `density` — read them from the bridge; never
- *   hard-code or override them.
+ * The following must be present in the consumer's JVM args:
+ * ```
+ * --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+ * ```
+ * Without this flag the [MethodHandles.privateLookupIn] call will fail.
  *
  * ## Example
  *
  * ```kotlin
  * @OptIn(ExperimentalComposeUiApi::class, InternalComposeUiApi::class)
- * val myFactory = VirdinSceneFactory { coroutineContext ->
- *     // 'this' is the WaylandBridge — read system-calculated values
- *     val scene = ImageComposeScene(
- *         width            = actualWidth,
- *         height           = actualHeight,
- *         density          = surfaceDensity,
- *         coroutineContext = coroutineContext
+ * val mySceneFactory = VirdinSceneFactory { coroutineContext ->
+ *     val scene = ImageComposeScene(actualWidth, actualHeight, surfaceDensity, coroutineContext)
+ *     val ctx      = SceneContextAccessor.getContext(scene)
+ *     val existing = SceneContextAccessor.getPlatformContext(ctx)
+ *     val lookup   = MethodHandles.privateLookupIn(ctx.javaClass, MethodHandles.lookup())
+ *     val varHandle = lookup.findVarHandle(
+ *         ctx.javaClass,
+ *         SceneContextAccessor.DELEGATE_FIELD,
+ *         PlatformContext::class.java
  *     )
- *
- *     // Inject PlatformContext in your module where reflection is allowed
- *     val ctxField = scene.javaClass.getDeclaredField("_platformContext")
- *     ctxField.isAccessible = true
- *     val ctx = ctxField.get(scene)
- *     val delegateField = ctx.javaClass.getDeclaredField("\$\$delegate_0")
- *     delegateField.isAccessible = true
- *     val existing = delegateField.get(ctx) as PlatformContext
- *     delegateField.set(ctx, object : PlatformContext by existing {
+ *     varHandle.set(ctx, object : PlatformContext by existing {
  *         override suspend fun startInputMethod(
  *             request: PlatformTextInputMethodRequest
  *         ): Nothing {
@@ -64,7 +53,7 @@ import kotlin.coroutines.CoroutineContext
  *                 onEditCommand = request.onEditCommand,
  *                 onImeAction   = request.onImeAction ?: {}
  *             )
- *             notifyInputSession(session)          // hand session to bridge
+ *             notifyInputSession(session)
  *             try {
  *                 suspendCancellableCoroutine<Nothing> { cont ->
  *                     cont.invokeOnCancellation { notifyInputSession(null) }
@@ -74,12 +63,11 @@ import kotlin.coroutines.CoroutineContext
  *             }
  *         }
  *     })
- *
  *     scene
  * }
  *
- * // Pass it to any surface function:
- * waylandDock(sceneFactory = myFactory, scope = scope) { MyContent() }
+ * // Pass to any surface function:
+ * waylandDock(sceneFactory = mySceneFactory, scope = scope) { MyContent() }
  * ```
  */
 @OptIn(ExperimentalComposeUiApi::class)
@@ -87,10 +75,11 @@ fun interface VirdinSceneFactory {
     /**
      * Create and return a fully configured [ImageComposeScene].
      *
-     * The receiver is the [WaylandBridge] that owns this renderer — use it
-     * to read [WaylandBridge.actualWidth], [WaylandBridge.actualHeight],
-     * [WaylandBridge.surfaceDensity], and to call
-     * [WaylandBridge.notifyInputSession].
+     * The receiver is the [WaylandBridge] — use it to read:
+     * - [WaylandBridge.actualWidth]
+     * - [WaylandBridge.actualHeight]
+     * - [WaylandBridge.surfaceDensity]
+     * - [WaylandBridge.notifyInputSession]
      *
      * @param coroutineContext Pass directly to [ImageComposeScene].
      */
